added some item

--- a/style.css
+++ b/style.css
@@ -8,3 +8,8 @@
     background-repeat: no-repeat;
     background-size: cover;
 }
+.banner-bg{
+    background-image: url(images/BG\ 2\ 1.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+}
